Updated the swagger page and added to the routes
